<resources>
    <string name="app_name">Unit Converter</string>
    <string name="Number">Enter the number to convert</string>
    <string name="Text1">Enter the number</string>
    <string name="Length">Length Conversions</string>
    <string name="Time">Time Conversions</string>
    <string name="Speed">Speed Conversions</string>
    <string name="Weight">Weight Conversions</string>
    <string name="Temperature">Temperature Conversions</string>
    <string name="Area">Area Conversions</string>
    <string name="heading">Available Conversions</string>
    <string name="MetToCen">Metres to Centimetres</string>
    <string name="CenToMet">Centimetres to Metres</string>
    <string name="KmToMet">Kilometres to Metres</string>
    <string name="MetToKm">Metres to Kilometres</string>
    <string name="KmToCen">Kilometres to Centimetres</string>
    <string name="CenToKm">Centimetres to Kilometres</string>
    <string name="KmToMil">Kilometres to Miles</string>
    <string name="MilToKm">Miles to Kilometres</string>
    <string name="FootToCen">Foot to Centimetres</string>
    <string name="CenToFoot">Centimetres to Foot</string>
    <string name="FootToMet">Foot to Metres</string>
    <string name="MetToFoot">Metres to Foot</string>
    <string name="KmphToMps">Kilometres per hour to Metres per second</string>
    <string name="MpsToKmph">Metres per second to Kilometres per hour</string>
    <string name="CelToFah">Celsius to Fahrenheit</string>
    <string name="FahToCel">Fahrenheit to Celsius</string>
    <string name="CelToKel">Celsius to Kelvin</string>
    <string name="KelToCel">Kelvin to Celsius</string>
    <string name="FahToKel">Fahrenheit to Kelvin</string>
    <string name="KelToFah">Kelvin to Fahrenheit</string>
    <string name="MinToHour">Minutes to Hours</string>
    <string name="HourToMin">Hours to Minutes</string>
    <string name="MinToSec">Minutes to Seconds</string>
    <string name="SecToMin">Seconds to Minutes</string>
    <string name="HourToSec">Hours to Seconds</string>
    <string name="SecToHour">Seconds to Hours</string>
    <string name="KgTog">Kilograms to Grams</string>
    <string name="gToKg">Grams to Kilograms</string>
    <string name="GToMg">Grams to Miligrams</string>
    <string name="MgToG">Miligrams to Grams</string>
    <string name="KgToPounds">Kilograms to Pounds</string>
    <string name="PoundsToKg">Pounds to Kilograms</string>
    <string name="AcToSf">Acres to Square Feet</string>
    <string name="SfToAc">Square Feet and Acres</string>
    <string name="HecToAc">Hectare to Acre</string>
    <string name="AcToHec">Acre to Hectare</string>
    <string name="HecToSf">Hectares to Square Feet</string>
    <string name="SfToHec">Square Feet to Hectares</string>
    <string name="SfToSm">Square Feet to Square Metres</string>
    <string name="SmToSf">Square Metres to Square Feet</string>
    <string name="ConvertedNumber">Answer: </string>
    <string name="ButtonText">Convert</string>
</resources>