<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/textArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Number"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/KgTog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/KgTog"
                    android:layout_margin="5dp"/>
                <RadioButton
                    android:id="@+id/gToKg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gToKg"
                    android:layout_margin="5dp"/>
                <RadioButton
                    android:id="@+id/GToMg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GToMg"
                    android:layout_margin="5dp"/>
                <RadioButton
                    android:id="@+id/MgToG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MgToG"
                    android:layout_margin="5dp"/>
                <RadioButton
                    android:id="@+id/KgToPounds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/KgToPounds"
                    android:layout_margin="5dp"/>
                <RadioButton
                    android:id="@+id/PoundsToKg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PoundsToKg"
                    android:layout_margin="5dp"/>
            </RadioGroup>
        </ScrollView>
        <TextView
            android:id="@+id/Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ConvertedNumber"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_margin="5dp">
        </TextView>
        <Button
            android:id="@+id/Convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonText"
            android:layout_margin="5dp">
        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>