<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/textArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Number"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/CelToFah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CelToFah"
                    android:layout_margin="5dp"/>
                <RadioButton
                    android:id="@+id/FahToCel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FahToCel"
                    android:layout_margin="5dp"/>
                <RadioButton
                    android:id="@+id/CelToKel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CelToKel"
                    android:layout_margin="5dp"/>
                <RadioButton
                    android:id="@+id/KelToCel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/KelToCel"
                    android:layout_margin="5dp"/>
                <RadioButton
                    android:id="@+id/FahToKel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FahToKel"
                    android:layout_margin="5dp"/>
                <RadioButton
                    android:id="@+id/KelToFah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/KelToFah"
                    android:layout_margin="5dp"/>
            </RadioGroup>
        </ScrollView>
        <TextView
            android:id="@+id/Answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ConvertedNumber"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_margin="5dp">
        </TextView>
        <Button
            android:id="@+id/Convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonText"
            android:layout_margin="5dp">
        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>