<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#4D0E3A">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#720D5D"
            android:layout_weight="1">
        <TextView
            android:id="@+id/Length"
            android:text="@string/Length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_margin="5dp"
            android:background="?android:selectableItemBackground"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:textColor="@android:color/white"
            />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#720D5D"
            android:layout_weight="1">
        <TextView
            android:id="@+id/Weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Weight"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_margin="5dp"
            android:background="?android:selectableItemBackground"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:textColor="@android:color/white"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#720D5D"
            android:layout_weight="1">
        <TextView
            android:id="@+id/Speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Speed"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_margin="5dp"
            android:background="?android:selectableItemBackground"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:textColor="@android:color/white"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#720D5D"
            android:layout_weight="1">
        <TextView
            android:id="@+id/Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_margin="5dp"
            android:background="?android:selectableItemBackground"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:textColor="@android:color/white"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#720D5D"
            android:layout_weight="1">
        <TextView
            android:id="@+id/Area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Area"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_margin="5dp"
            android:background="?android:selectableItemBackground"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:textColor="@android:color/white"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#720D5D"
            android:layout_weight="1">
        <TextView
            android:id="@+id/Temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Temperature"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_margin="5dp"
            android:background="?android:selectableItemBackground"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:textColor="@android:color/white"/>
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>